Тестовое задание. Парсер xml. [#1001] new Integer заменен на Integer.valueOf